Reorganize file structure according to doc

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": "tailwindcss ./src/styles.css -o ./public/styles.css"
+    "build-css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css"
   },
   "repository": {
     "type": "git",
