--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css"
+    "build-css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --minify",
+    "watch": "watch 'npm run build-css' ./src"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/rtokala14/tail-recipes#readme",
   "dependencies": {
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "watch": "^1.0.2"
   }
 }
